--- a/style.css
+++ b/style.css
@@ -11,7 +11,11 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #212121;
+    /* background-color: #212121; */
+    width: 100%;
+    height: 100vh;
+    background: url('./background.jpg') no-repeat;
+    background-size: cover;
 }
 
 .container{
@@ -24,7 +28,7 @@ body{
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.1);
     border: 2px solid rgba(255, 255, 255, 0.25);
-    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.9);
+    box-shadow: 0px 0px 30px rgba(255, 255, 255, 0.1);
     display: flex;
     justify-content: center;
     align-items: center;
