--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
     /* background-color: #212121; */
     width: 100%;
     height: 100vh;
-    background: url('./background.jpg') no-repeat;
+    background: url('/background.jpg') no-repeat;
     background-size: cover;
 }
 
